# server.js
@@ -2,16 +2,30 @@ const express = require('express');
 const bodyParser = require('body-parser');
 const MongoClient = require('mongodb').MongoClient;
 const mongodb = require('./db/connect');
+const dotenv = require('dotenv');
+const { auth, requiresAuth } = require('express-openid-connect');
 const transactionsRoutes = require('./routes/transactions');
 const customerRoutes = require('./routes/customers');
 const usersRoutes = require('./routes/users');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 const app = express();
-const port = process.env.PORT || 8080;
+const port = process.env.PORT || 3000;
+
+dotenv.config();
+
+const config = {
+    authRequired: false,
+    auth0Logout: true,
+    secret: process.env.SECRET,
+    baseURL: process.env.BASE_URL,
+    clientID: process.env.CLIENT_ID,
+    issuerBaseURL: process.env.ISSUER_BASE_URL
+};
 
 app
     .use(bodyParser.json())
+    .use(auth(config))
     .use((req, res, next) => {
         res.setHeader('Access-Control-Allow-Origin', '*');
         res.setHeader(
@@ -21,7 +35,10 @@ app
         res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
         next();
     })
-    .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
+    .get('/', requiresAuth(), (req, res) => {
+        res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
+    })
+    .use('/api-docs', requiresAuth(), swaggerUi.serve, swaggerUi.setup(swaggerDocument))
     .use('/transactions', transactionsRoutes)
     .use('/customers', customerRoutes)
     .use('/users', usersRoutes);
